--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -606,6 +606,7 @@ header {
         line-height: 55px;
         color: #FFFFFF;
         margin-bottom: 30px;
+        position:relative;
       }
       p{
         font-size: 30px;
