--- a/css/style.css
+++ b/css/style.css
@@ -269,9 +269,9 @@ footer .contacts .btn-3 a {
 .burger-menu .burger-menu_nav .btn-1 a,
 .burger-menu .burger-menu_nav footer .contacts .btn-3 a a,
 footer .contacts .btn-3 .burger-menu .burger-menu_nav a a,
-#home .content .box .btn-1 a,
-#home .content .box footer .contacts .btn-3 a a,
-footer .contacts .btn-3 #home .content .box a a,
+#home .home-slider .items .box .btn-1 a,
+#home .home-slider .items .box footer .contacts .btn-3 a a,
+footer .contacts .btn-3 #home .home-slider .items .box a a,
 #home-btn-mobile .btn-1 a,
 #home-btn-mobile footer .contacts .btn-3 a a,
 footer .contacts .btn-3 #home-btn-mobile a a,
@@ -337,9 +337,9 @@ footer .contacts .btn-3 a a,
 .burger-menu .burger-menu_nav .btn-1 a:before,
 .burger-menu .burger-menu_nav footer .contacts .btn-3 a a:before,
 footer .contacts .btn-3 .burger-menu .burger-menu_nav a a:before,
-#home .content .box .btn-1 a:before,
-#home .content .box footer .contacts .btn-3 a a:before,
-footer .contacts .btn-3 #home .content .box a a:before,
+#home .home-slider .items .box .btn-1 a:before,
+#home .home-slider .items .box footer .contacts .btn-3 a a:before,
+footer .contacts .btn-3 #home .home-slider .items .box a a:before,
 #home-btn-mobile .btn-1 a:before,
 #home-btn-mobile footer .contacts .btn-3 a a:before,
 footer .contacts .btn-3 #home-btn-mobile a a:before,
@@ -390,9 +390,9 @@ footer .contacts .btn-3 a a:before,
 }
 
 .burger-menu .burger-menu_nav .btn-1 a:hover,
-#home .content .box .btn-1 a:hover,
-#home .content .box footer .contacts .btn-3 a a:hover,
-footer .contacts .btn-3 #home .content .box a a:hover,
+#home .home-slider .items .box .btn-1 a:hover,
+#home .home-slider .items .box footer .contacts .btn-3 a a:hover,
+footer .contacts .btn-3 #home .home-slider .items .box a a:hover,
 #home-btn-mobile .btn-1 a:hover,
 #home-btn-mobile footer .contacts .btn-3 a a:hover,
 footer .contacts .btn-3 #home-btn-mobile a a:hover,
@@ -431,9 +431,9 @@ footer .contacts .btn-3 a a:hover,
 }
 
 .burger-menu .burger-menu_nav .btn-1 a:hover:before,
-#home .content .box .btn-1 a:hover:before,
-#home .content .box footer .contacts .btn-3 a a:hover:before,
-footer .contacts .btn-3 #home .content .box a a:hover:before,
+#home .home-slider .items .box .btn-1 a:hover:before,
+#home .home-slider .items .box footer .contacts .btn-3 a a:hover:before,
+footer .contacts .btn-3 #home .home-slider .items .box a a:hover:before,
 #home-btn-mobile .btn-1 a:hover:before,
 #home-btn-mobile footer .contacts .btn-3 a a:hover:before,
 footer .contacts .btn-3 #home-btn-mobile a a:hover:before,
@@ -1074,6 +1074,57 @@ header .header-fixed-box .right-box-fixed .burger-menu .burger-menu_button.two {
   z-index: 0;
 }
 
+#home .home-slider .items .box {
+  padding: 40px  0 60px 0;
+  z-index: 99;
+  width: 52%;
+  margin-top: 87px;
+}
+
+#home .home-slider .items .box:before {
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 0 4px 4px 0;
+  content: "";
+  position: absolute;
+  width: 52%;
+  height: 351px;
+  left: 0;
+  top: 87px;
+}
+
+#home .home-slider .items .box h1 {
+  position: relative;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 45px;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
+
+#home .home-slider .items .box p {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: #FFFFFF;
+  position: relative;
+  margin-bottom: 45px;
+}
+
+#home .home-slider .items .box .btn-1 a.first,
+#home .home-slider .items .box footer .contacts .btn-3 a a.first,
+footer .contacts .btn-3 #home .home-slider .items .box a a.first {
+  width: 200px;
+  margin-right: 50px;
+}
+
+#home .home-slider .items .box .btn-1 a.second,
+#home .home-slider .items .box footer .contacts .btn-3 a a.second,
+footer .contacts .btn-3 #home .home-slider .items .box a a.second {
+  width: 274px;
+  background: none;
+  border: 1px solid #ffffff;
+}
+
 #home .home-slider .items.second {
   background: url("../images/slider-2.png") no-repeat bottom;
   background-size: cover;
@@ -1102,64 +1153,6 @@ header .header-fixed-box .right-box-fixed .burger-menu .burger-menu_button.two {
 #home .home-slider .items.seven {
   background: url("../images/slider-7.png") no-repeat bottom;
   background-size: cover;
-}
-
-#home .content {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  top: 209px;
-  z-index: 900;
-}
-
-#home .content .box {
-  width: 60%;
-  padding: 40px  0 60px 0;
-  z-index: 99;
-}
-
-#home .content .box:before {
-  background: rgba(0, 0, 0, 0.6);
-  border-radius: 0 4px 4px 0;
-  content: "";
-  position: absolute;
-  width: 60%;
-  height: 351px;
-  left: 0;
-  top: 0;
-}
-
-#home .content .box h1 {
-  position: relative;
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 45px;
-  color: #FFFFFF;
-  margin-bottom: 20px;
-}
-
-#home .content .box p {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-  color: #FFFFFF;
-  position: relative;
-  margin-bottom: 45px;
-}
-
-#home .content .box .btn-1 a.first,
-#home .content .box footer .contacts .btn-3 a a.first,
-footer .contacts .btn-3 #home .content .box a a.first {
-  width: 200px;
-  margin-right: 50px;
-}
-
-#home .content .box .btn-1 a.second,
-#home .content .box footer .contacts .btn-3 a a.second,
-footer .contacts .btn-3 #home .content .box a a.second {
-  width: 274px;
-  background: none;
-  border: 1px solid #ffffff;
 }
 
 #home-btn-mobile {
@@ -1346,6 +1339,25 @@ footer .contacts .btn-3 #exclusive a a img {
 
 #design-project .section-subtitle {
   margin-bottom: 732px;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+  width: 9px !important;
+  height: 9px !important;
+}
+
+.section-subtitle {
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.section-subtitle.mobile {
+  display: block;
+}
+
+.section-subtitle.pc {
+  display: none;
 }
 
 #portfolio {
@@ -2832,8 +2844,16 @@ footer .contacts .btn-3 #send form a {
     display: none;
   }
 
-  #home .content {
-    top: 145px;
+  #home .home-slider .items .box {
+    width: 90%;
+  }
+
+  #home .home-slider .items .box:before {
+    display: none;
+  }
+
+  #professional-design .section-title {
+    width: 100%;
   }
 }
 
@@ -2852,9 +2872,9 @@ footer .contacts .btn-3 #send form a {
   .burger-menu .burger-menu_nav .btn-1 a,
   .burger-menu .burger-menu_nav footer .contacts .btn-3 a a,
   footer .contacts .btn-3 .burger-menu .burger-menu_nav a a,
-  #home .content .box .btn-1 a,
-  #home .content .box footer .contacts .btn-3 a a,
-  footer .contacts .btn-3 #home .content .box a a,
+  #home .home-slider .items .box .btn-1 a,
+  #home .home-slider .items .box footer .contacts .btn-3 a a,
+  footer .contacts .btn-3 #home .home-slider .items .box a a,
   #home-btn-mobile .btn-1 a,
   #home-btn-mobile footer .contacts .btn-3 a a,
   footer .contacts .btn-3 #home-btn-mobile a a,
@@ -2897,6 +2917,14 @@ footer .contacts .btn-3 #send form a {
     background-size: cover;
   }
 
+  #home .home-slider .items .box {
+    width: 100%;
+  }
+
+  #home .home-slider .items .box:before {
+    display: none;
+  }
+
   #home .home-slider .items.second {
     background: url("../images/img-2.png") no-repeat bottom;
     background-size: cover;
@@ -2925,14 +2953,6 @@ footer .contacts .btn-3 #send form a {
   #home .home-slider .items.seven {
     background: url("../images/img-7.png") no-repeat bottom;
     background-size: cover;
-  }
-
-  #home .content .box {
-    width: 100%;
-  }
-
-  #home .content .box:before {
-    display: none;
   }
 
   #home-btn-mobile {
@@ -3195,23 +3215,34 @@ footer .contacts .btn-3 #send form a {
     display: block;
   }
 
-  #home .content .box h1 {
+  #home .items .box h1 {
     font-size: 28px;
     line-height: 35px;
   }
 
-  #home .content .box p {
+  #home .items .box p {
     font-size: 21px;
     line-height: 21px;
     margin-bottom: 81px;
   }
 
-  #home .content .box .btn-box {
+  #home .items .box .btn-box {
     display: none !important;
   }
 
-  #home .home-slider .items {
-    height: 514px;
+  #exclusive .box {
+    margin-bottom: 30px;
+  }
+
+  #exclusive .box a {
+    height: 40px;
+    padding: 10px 5px 10px 5px;
+  }
+
+  #exclusive .box .scale {
+    width: 100%;
+    height: auto;
+    padding: 0;
   }
 
   #materials .btn-1,
@@ -3269,23 +3300,21 @@ footer .contacts .btn-3 #send form a {
 }
 
 @media (max-width: 480px) {
-  .btn-1,
-  footer .contacts .btn-3 a {
-    height: 56px !important;
-  }
-
   .btn-1 a,
   footer .contacts .btn-3 a a {
-    font-size: 14px;
-    line-height: 26px;
+    font-size: 14px !important;
+    line-height: 20px !important;
+    height: 56px !important;
+    width: 220px !important;
+    padding: 0 10px !important;
   }
 
   .burger-menu .burger-menu_nav .btn-1 a:before,
   .burger-menu .burger-menu_nav footer .contacts .btn-3 a a:before,
   footer .contacts .btn-3 .burger-menu .burger-menu_nav a a:before,
-  #home .content .box .btn-1 a:before,
-  #home .content .box footer .contacts .btn-3 a a:before,
-  footer .contacts .btn-3 #home .content .box a a:before,
+  #home .home-slider .items .box .btn-1 a:before,
+  #home .home-slider .items .box footer .contacts .btn-3 a a:before,
+  footer .contacts .btn-3 #home .home-slider .items .box a a:before,
   #home-btn-mobile .btn-1 a:before,
   #home-btn-mobile footer .contacts .btn-3 a a:before,
   footer .contacts .btn-3 #home-btn-mobile a a:before,
@@ -3335,9 +3364,9 @@ footer .contacts .btn-3 #send form a {
   }
 
   .burger-menu .burger-menu_nav .btn-1 a:hover:before,
-  #home .content .box .btn-1 a:hover:before,
-  #home .content .box footer .contacts .btn-3 a a:hover:before,
-  footer .contacts .btn-3 #home .content .box a a:hover:before,
+  #home .home-slider .items .box .btn-1 a:hover:before,
+  #home .home-slider .items .box footer .contacts .btn-3 a a:hover:before,
+  footer .contacts .btn-3 #home .home-slider .items .box a a:hover:before,
   #home-btn-mobile .btn-1 a:hover:before,
   #home-btn-mobile footer .contacts .btn-3 a a:hover:before,
   footer .contacts .btn-3 #home-btn-mobile a a:hover:before,
@@ -3457,51 +3486,33 @@ footer .contacts .btn-3 #send form a {
     }
 }
 
-  .owl-theme .owl-dots .owl-dot span {
-    width: 9px !important;
-    height: 9px !important;
-  }
-
   .section-title {
     font-weight: 600;
     font-size: 22px;
     line-height: 32px;
-    color: #000000;
-  }
-
-  .section-subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    color: #000000;
-  }
-
-  .section-subtitle.mobile {
-    display: block;
-  }
-
-  .section-subtitle.pc {
-    display: none;
   }
 
   #home .home-slider .items {
     height: 266px;
+    padding: 52px 30px 0 30px;
   }
 
-  #home .content {
-    top: 95px;
-  }
-
-  #home .content .box {
+  #home .home-slider .items .container {
     padding: 0;
   }
 
-  #home .content .box .btn-1,
-  #home .content .box footer .contacts .btn-3 a,
-  footer .contacts .btn-3 #home .content .box a {
+  #home .home-slider .items .box {
+    padding: 0;
+    margin-top: 0;
+  }
+
+  #home .home-slider .items .box .btn-1,
+  #home .home-slider .items .box footer .contacts .btn-3 a,
+  footer .contacts .btn-3 #home .home-slider .items .box a {
     display: none;
   }
 
-  #home .content .box h1 {
+  #home .home-slider .items .box h1 {
     font-weight: bold;
     font-size: 24px;
     line-height: 34px;
@@ -3509,7 +3520,7 @@ footer .contacts .btn-3 #send form a {
     margin-bottom: 20px;
   }
 
-  #home .content .box p {
+  #home .home-slider .items .box p {
     font-size: 16px;
     line-height: 20px;
     color: #FFFFFF;
@@ -3526,7 +3537,7 @@ footer .contacts .btn-3 #send form a {
   }
 
   #exclusive .box {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 
   #exclusive .box a {
@@ -3752,8 +3763,12 @@ footer .contacts .btn-3 #send form a {
   }
 
   #about {
-    background: url("../images/company-mobile-background.png") no-repeat;
+    background: url("../images/company-mobile-background.png") no-repeat center;
     background-size: cover;
+  }
+
+  #about .section-title {
+    width: 100%;
   }
 
   #about .box-img {
@@ -4243,6 +4258,10 @@ footer .contacts .btn-3 #send form a {
     font-size: 14px !important;
     line-height: 16px !important;
     margin-bottom: 12px !important;
+  }
+
+  #scheme .box .box-items .left .line {
+    height: 135px;
   }
 }
 
